# platform_ds_toolkit

./: README.md  readme_sf.md
platform_ds_toolkit_ALL_IN_ONE/: README.md  pyproject.toml  vault 2.py
platform_ds_toolkit_ALL_IN_ONE/scripts/: setup_credentials.py
platform_ds_toolkit_ALL_IN_ONE/specials_detection_scarcity_classifier/: README.md
platform_ds_toolkit_ALL_IN_ONE/specials_detection_scarcity_classifier/data/: sample_specials_data.csv
platform_ds_toolkit_ALL_IN_ONE/specials_detection_scarcity_classifier/examples/: train_and_evaluate.py
platform_ds_toolkit_ALL_IN_ONE/specials_detection_scarcity_classifier/src/specials_classifier/: features.py  model.py
platform_ds_toolkit_ALL_IN_ONE/src/platform_ds_toolkit/: __init__.py  archive.py  batch.py  io.py  notify.py  parallel.py  pipeline.py  transform.py  validate.py
platform_ds_toolkit_ALL_IN_ONE/src/platform_ds_toolkit/credentials/: credentials_store.py  key_manager.py
platform_ds_toolkit_ALL_IN_ONE/src/platform_ds_toolkit/features/: store.py
platform_ds_toolkit_ALL_IN_ONE/src/platform_ds_toolkit/lineage/: tracker.py
platform_ds_toolkit_ALL_IN_ONE/src/platform_ds_toolkit/models/: store.py
platform_ds_toolkit_ALL_IN_ONE/src/platform_ds_toolkit/registry/: registry.py
platform_ds_toolkit_ALL_IN_ONE/src/platform_ds_toolkit/validation/: feature_validation.py
